--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=General quizapp
+spring.data.mongodb.uri=mongodb+srv://root:root@karthikcluster.qditp.mongodb.net/?retryWrites=true&w=majority&appName=KarthikCluster
+spring.data.mongodb.database=sample_mflix
